<resources>
    <string name="app_name">IFT</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_news">News</string>
    <string name="title_calendar">Calendar</string>
    <string name="title_advocate">Advocate</string>
    <string name="title_contact">Contact</string>
    <string name="title_settings">Settings</string>
    <string name="login_description">To access the full benefits of the IFT app, login using your IFT account email and password or create an account if you do not have one.</string>
    <string name="login">login</string>
    <string name="submit">submit</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="sign_up_underlined"><u>SIGN UP</u></string>
    <string name="title_invite">Invite Friends</string>
    <string name="favorite">Favorite</string>
    <string name="share">Share the IFT app with your friends.</string>
    <string name="help">Help us spread\nthe word!</string>
    <string name="invite_facebook_friends">Invite Facebook friends</string>
    <string name="invite_twitter_followers">Invite Twitter followers</string>
    <string name="email_your_friends">Email your friends</string>
    <string name="message_your_friends">Message your friends</string>
    <string name="log_out">Log Out</string>
    <string name="phone">Phone:</string>
    <string name="email">Email:</string>
    <string name="member_num">Member #:</string>
    <string name="email_alerts">Email alerts</string>
    <string name="push_notifications">Push Notifications</string>
    <string name="notifications">Notifications</string>
    <string name="local_information">Local Information</string>
    <string name="president">President:</string>
    <string name="vice_president">Vice President:</string>
    <string name="field_service_director">Field Service Director:</string>
    <string name="preferences">Preferences</string>
    <string name="search">SEARCH</string>
    <string name="facebook_app_id">164249154176639</string>
    <string name="no_results">No Results</string>
    <string name="create_an_account">CREATE AN ACCOUNT</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="home_email_address">Home Email Address</string>
    <string name="next">NEXT</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="log_in_underlined"><u>LOG IN</u></string>
    <string name="create_account_non_member">CREATE ACCOUNT - NON-MEMBER</string>
    <string name="go_back_underlined"><u>GO BACK</u></string>
    <string name="confirm_password">Confirm Password</string>
    <string name="take_action">TAKE ACTION!</string>
    <string name="event_name">Event Name</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="all_day">All Day</string>
    <string name="summary">Summary</string>
    <string name="description">Description</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="zip">Zip</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="back">Back</string>
    <string name="forward">Forward</string>
</resources>
