<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_news"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_news" />

    <item
        android:id="@+id/navigation_calendar"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_calendar" />

    <item
        android:id="@+id/navigation_advocate"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_advocate" />

    <item
        android:id="@+id/navigation_contact"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_contact" />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_settings" />

</menu>
