<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    android:layout_width="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="62dp"
        android:layout_marginRight="62dp"
        android:layout_marginTop="40dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/eventName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/helvetica"
            android:hint="@string/event_name"
            android:inputType="text"
            android:textSize="12sp" />

        <!--Date Entry-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/startDate"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:editable="false"
                        android:fontFamily="@font/helvetica"
                        android:hint="@string/start_date"
                        android:textSize="12sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/endDate"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:editable="false"
                        android:fontFamily="@font/helvetica"
                        android:hint="@string/end_date"
                        android:textSize="12sp" />


                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:fontFamily="@font/helvetica"
                    android:gravity="center"
                    android:text="@string/all_day"
                    android:textColor="@color/neutral_grey"
                    android:textSize="16sp" />

                <Switch
                    android:id="@+id/allDaySwitch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>
        </LinearLayout>

        <EditText
            android:id="@+id/summary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/helvetica"
            android:hint="@string/summary"
            android:inputType="text"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:fontFamily="@font/helvetica"
            android:hint="@string/description"
            android:inputType="textMultiLine"
            android:minLines="3"
            android:scrollbars="vertical"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/helvetica"
            android:hint="@string/address"
            android:inputType="textPostalAddress"
            android:textSize="12sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/city"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/helvetica"
                android:hint="@string/city"
                android:inputType="textPostalAddress"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/state"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/helvetica"
                android:hint="@string/state"
                android:inputType="textPostalAddress"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/zip"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/helvetica"
                android:hint="@string/zip"
                android:inputType="number"
                android:textSize="12sp" />

        </LinearLayout>

        <EditText
            android:id="@+id/eventLink"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/helvetica"
            android:hint="Event link (URL)"
            android:inputType="textUri"
            android:textSize="12sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Add event to calendar" />

            <Switch
                android:id="@+id/addEventToCalendarSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/addEventButton"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/ift_teal"
            android:fontFamily="@font/helvetica"
            android:gravity="center"
            android:text="Add Event"
            android:textColor="@android:color/white"
            android:textSize="17sp" />

    </LinearLayout>
</ScrollView>