<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/top"
        android:layout_weight="10"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <TextView
            android:id="@+id/share"
            android:text="@string/share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="18dp"
            />

        <TextView
            android:id="@+id/help"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/help"
            android:textSize="25sp"
            android:textColor="@color/ift_teal"
            android:layout_centerHorizontal="true"
            android:layout_above="@id/share"
            android:layout_marginBottom="20dp"
            />

        <View
            android:background="@color/barely_visible_grey"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_weight="16"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:gravity="center_horizontal">
        
        <LinearLayout
            android:id="@+id/facebook_button"
            android:layout_width="200dp"
            android:layout_height="30dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:gravity="center"
            android:background="@color/barely_visible_grey"
            >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:src="@drawable/facebook"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="start|center_vertical"
                android:textSize="14.5sp"
                android:textColor="@color/light_neutral_grey"
                android:text="@string/invite_facebook_friends"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/twitter_button"
            android:layout_width="200dp"
            android:layout_height="30dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:gravity="center"
            android:background="@color/barely_visible_grey"
            >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:src="@drawable/tweet"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="start|center_vertical"
                android:textSize="14.5sp"
                android:textColor="@color/light_neutral_grey"
                android:text="@string/invite_twitter_followers"/>

        </LinearLayout>
        <LinearLayout
            android:id="@+id/email_button"
            android:layout_width="200dp"
            android:layout_height="30dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:gravity="center"
            android:background="@color/barely_visible_grey"
            >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:src="@drawable/email"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="start|center_vertical"
                android:textSize="14.5sp"
                android:textColor="@color/light_neutral_grey"
                android:text="@string/email_your_friends"/>

        </LinearLayout>
        <LinearLayout
            android:id="@+id/message_button"
            android:layout_width="200dp"
            android:layout_height="30dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:gravity="center"
            android:background="@color/barely_visible_grey"
            >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:src="@drawable/message"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="start|center_vertical"
                android:textSize="14.5sp"
                android:textColor="@color/light_neutral_grey"
                android:text="@string/message_your_friends"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>